--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -14,6 +14,160 @@
 @charset "utf-8";
 /* CSS Document */
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+
+.hidden {
+	display:none;
+}
+
+.showpup {
+	display:block;
+}
+
+.inlineIcon {
+
+    display: inline-block;
+
+    position: relative;
+	
+	float:left;
+
+    vertical-align: middle;
+
+    margin-right: 6px;
+
+}
+
+
+
+.ui-bar-a, .ui-page-theme-a .ui-bar-inherit, html .ui-bar-a .ui-bar-inherit, html .ui-body-a .ui-bar-inherit, html body .ui-group-theme-a .ui-bar-inherit {
+    background-color: #ef1821 !important;
+    border-color: #dddddd;
+    color: #333333;
+    font-weight: bold;
+    text-shadow: 0 1px 0 #eeeeee;
+}
+
+.ui-header .ui-title, .ui-footer .ui-title {
+  
+    margin: 0 auto !important;
+	font-weight:700;
+   
+}
+
+#selected_country_header {
+	background-color: rgba(255,255,255,0.9) !important;
+    border-color: rgba(255,255,255,0.7) !important;
+    color: #333;
+	text-shadow: 0 1px 0 #f3f3f3;
+	box-shadow: 0 1px 0 #333;
+}
+#footer {
+	position:fixed;
+	bottom:0px;
+	width:100%;
+	max-height:50px;
+	padding:0;
+	background:rgba(204,0,9,1);
+	background-color:transparent !important;
+	border:none;
+	
+}
+
+
+
+.footer-text {
+	color:#ddd;
+	text-shadow:none;
+}
+
+/*.list-divider, .ui-li-divider {
+	background-color:transparent !important;
+}
+*/
+
+#main {
+    display: block;
+    position: relative;
+}
+
+#main {
+	background-image:url(../images/background.png); 
+	padding:0px;
+	background-position:center;
+	background-size:cover;
+	border: none;
+	background-color:rgba(204,0,0,1);
+}
+/*
+.ui-listview > li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.4) !important;
+}*/
+
+.ui-header-fixed {
+    padding-top: 10px !important;
+    top: 0px;
+	position:fixed;
+}
+
+.head-nav-buttons {
+	position:fixed;
+	top:20px !important;
+	margin-top:20px !important;
+	/*border:0;*/
+}
+
+
+.ui-navbar a {
+    max-width: 100%;
+    top: 25px !important;
+}
+
+#navbar {
+	position:fixed;
+	top:-10px;
+}
+
+.ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head + body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head + body .ui-btn.ui-btn-a:visited {
+
+    border-color: rgba(255,255,255,0.2);;
+  
+}
+
+
+
+/**************/
+.ui-listview > .ui-li-divider {
+    padding-left: 0.5em;
+	background-color:rgba(239,24,33,0.9) !important;
+	color:#eee;
+	font-size:1.2em;
+	text-shadow:0  -1px  0  #888;
+	font-weight: 700 !important; 
+	background: url("../images/icons-svg/carat-d-white.svg");
+	
+	background-repeat:no-repeat;
+	background-position:center right 20px;
+	
+	
+	
+   
+
+	
+}
+.inlineIcon {
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    margin-right: 6px;
+}
+/**************/
+
+.ui-collapsible-content {
+   	margin: 0;
+    padding: 0;
+}
+
 .page-header {
 	background-image:url("../images/logo.png");
 	background-position: center;
@@ -22,6 +176,40 @@
 	margin-top:2px;
 }
 
+
+#icon-closePanel {
+	left:0px;
+
+	
+	
+}
+
+#icon-getLocation {
+	margin-left:10%;
+	
+	
+}
+/*.nav-icon {
+	border:2px !important;
+}*/
+.app-nav {
+    position: fixed;
+    top: 18px;
+    width: 100%;
+}
+.img-circle {
+	border-radius: 50%;
+	height: 30px;
+    width: 21px;
+	border:0px solid;
+	margin-right:10px;
+ }
+
+img.app-logo {
+	max-width:100%;
+	height:40px;
+}
+   
 .detail-icon {
 	vertical-align:middle;
 	width:30px;
@@ -33,18 +221,32 @@
 	padding:0 !important;
 }
 
+.ui-collapsible-content {
+    border: 0px solid;
+    padding: 2px 0.5em;
+}
+
 .options-panel {
 	background-color:#ECECEC !important;
 	/*width:20em;*/
 }
 
+#listPanel .ui-navbar, #optionsPanel.ui-navbar {
+    max-width: 100%;
+    min-height: 76px;
+}
+
+
+
+
 .options-panel-content {
 	margin: 0px 0px 0px 0px;
+	padding:0;
 }
 
 .footer-text {
 	font-size:8pt;
-	font-weight:bold;
+	font-weight:100;
 	text-align:center;
 }
 
@@ -74,6 +276,12 @@
 	color:#1F1D1D;	
 }
 
+
+.ui-bar-b, .ui-page-theme-b .ui-bar-inherit, html .ui-bar-b .ui-bar-inherit, html .ui-body-b .ui-bar-inherit, html body .ui-group-theme-b .ui-bar-inherit {
+    background-color: rgba(244, 0, 9, 1);
+   
+}
+
 .country-detail-header-name {
 	margin-left:10px;
 	font-size:13pt;
@@ -88,10 +296,35 @@
 	padding-top:30px;
 }
 
-.content-area {
-	background-image:url(../images/background.png); 
-	padding:0px;
-	border: none;
+
+
+.ui-bar-b, .ui-page-theme-b .ui-bar-inherit, html .ui-bar-b .ui-bar-inherit, html .ui-body-b .ui-bar-inherit, html body .ui-group-theme-b .ui-bar-inherit {
+    color: #ffffff;
+    font-weight: 100 !important;
+    text-shadow: none;
+    text-transform: uppercase;
+}
+
+.options-panel .ui-panel-page-container-a, .options-panel {
+   
+	padding-left:0px !important;
+	padding-right:0px !important;
+   
+}
+/*
+#listPanel{
+	margin-top:20px;
+	
+}
+*/
+
+.ui-body-a, .ui-page-theme-a .ui-body-inherit, html .ui-bar-a .ui-body-inherit, html .ui-body-a .ui-body-inherit, html body .ui-group-theme-a .ui-body-inherit {
+    background-color: rgba(223,235,236,0.95) !important;
+    border-color: rgba(255,255,255,0.7) !important;
+    color: #333;
+	padding-left:20px;
+	padding-right:20px;
+    text-shadow: 0 1px 0 #f3f3f3;
 }
 
 .content-table {
@@ -181,4 +414,46 @@ a {
 
 ::-webkit-scrollbar {
     display:none;
+}
+
+
+/************* CUSTOM ********/
+
+.ui-btn-up-b {
+		background-color:rgba(244, 0, 9, 0.9) !important;
+	}	
+	
+ul.jqm-list li {
+	list-style-type:none;
+	margin:0px;
+	
+}
+
+/*ul.jqm-list {
+	margin-left: -40px;
+}*/
+/*
+ul.jqm-list ul{
+    margin-left: -40px;
+}*/
+
+i.flag-holder {
+	padding-right: 10px;
+	float:left;
+}
+
+.ui-content .ui-listview, .ui-panel-inner > .ui-listview {
+    margin: 0;
+}
+
+
+html, body {
+	font-family:"Open Sans", sans-serif;
+	font-weight:100px !important;
+}
+
+.ui-page-theme-a a, html .ui-bar-a a, html .ui-body-a a, html body .ui-group-theme-a a {
+    color: #333;
+    font-weight: 100 !important;
+    margin-left: 10px;
 }
